# cdv-webapp

./: .gitignore  CLAUDE.md  README.md  consumer.py  docker-compose.yaml  producer.py
.claude/agents/: devops-azure-cloudflare.md  flask-backend-dev.md  frontend-nextjs-reviewer.md  qa-automation-playwright.md
.github/workflows/: deploy-pages.yml  e2e-tests.yml
backend/: .env.example  AGENTS.md  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  email_consumer.py  pyproject.toml  run.sh  run_email_consumer.sh  test_api.py
backend/app/: __init__.py  auth.py  config.py  models.py  rabbitmq.py  redis_client.py  routes.py  routes_auth.py  routes_users.py  schemas.py  services.py
frontend/: AGENTS.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/dashboard/: dashboard.module.css  layout.tsx  page.tsx
frontend/app/login/: layout.tsx  login.module.css  page.tsx
frontend/app/register/: layout.tsx  page.tsx  register.module.css
frontend/app/users/: layout.tsx  page.tsx  users.module.css
frontend/lib/: api.ts  auth.tsx
qa/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
qa/fixtures/: test-base.ts
qa/tests/: auth.spec.ts  dashboard.spec.ts  users.spec.ts
