[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Minimal Flask REST API"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
flask-sqlalchemy = "^3.1"
flask-jwt-extended = "^4.6"
flask-cors = "^5.0"
marshmallow = "^3.23"
python-dotenv = "^1.0"
pika = "^1.3"
redis = "^7.1.0"

[tool.poetry.group.dev.dependencies]
requests = "^2.32"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
